# Week3_GenAI

./: .gitignore  .~lock.Week03.odt#  .~lock.Week03Findings.odt#  README.md  Task1_part1_ans.odt  Week03.odt  Week03Findings.odt  docker-compose.yml  install-extensions.sh  pyproject.toml  requirements.txt  verify_gemini.py
app/: database.py  executor.py  logging_config.py  main.py  ml_model.py  models.py  sql_generator.py  validator.py
app/crud/: __init__.py  employee_crud.py  office_crud.py  order_crud.py  orderdetail_crud.py  payment_crud.py  product_crud.py  productline_crud.py
app/routers/: employee_router.py  office_router.py  order_router.py  orderdetail_router.py  payment_router.py  product_router.py  productline_router.py
app/schemas/: __init__.py  employee_schemas.py  office_schemas.py  order_schemas.py  orderdetail_schemas.py  payment_schemas.py  product_schemas.py  productline_schemas.py
