[project]
name = "assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.7.1",
    "cookiecutter-data-science>=2.3.0",
    "fastapi>=0.136.1",
    "google-genai>=2.4.0",
    "groq>=1.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
